2000-10-31  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* Array2.cc (Array2<T>::transpose): Avoid copy for empty matrices
	and vectors.  Use xelem for faster access to elements when copying.

2000-10-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CMatrix.cc (ComplexMatrix::cumsum, ComplexMatrix::cumprod):
	Correct indexing for operation across rows.
	* dMatrix.cc (Matrix::cumsum, Matrix::cumprod): Likewise.

2000-10-12  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* Array2-idx.h (Array2<T>::index (idx_vector&)): Avoid copying
	elements if arg is a colon.

2000-10-12  Cai Jianming <caijianming@yahoo.co.uk>

	dMatrix.cc (Matrix::cumprod (int) const): New arg, DIM.
	(Matrix::cumsum (int) const): Likewise.
	(Matrix::prod (int) const): Likewise.
	(Matrix::sum (int) const): Likewise.
	(Matrix::sumsq (int) const): Likewise.
	* CMatrix.cc (ComplexMatrix::cumprod (int dim) const): Likewise.
	(ComplexMatrix::cumsum (int) const): Likewise.
	(ComplexMatrix::prod (int) const): Likewise.
	(ComplexMatrix::sum (int) const): Likewise.
	(ComplexMatrix::sumsq (int) const): Likewise.

2000-10-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (Array2<T>::index (idx_vector&)): Correctly set
	size if Array<T>::index returns an empty array.

2000-08-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-ops.cc (file_ops::link, file_ops::symlink,
	file_ops::readlink): New functions.

2000-08-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (Array2<T>::index (idx_vector&)): If a scalar is
	indexed, always return an object the same size as the index arg.

	* oct-time.cc (octave_base_tm::strftime): Return empty string for
	empty format.

2000-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-cutils.c (oct_strptime): New function.
	* oct-time.cc (octave_strptime::init): Call it instead of strptime.
	Don't declare strptime.  Don't define _XOPEN_SOURCE or _BSD_SOURCE.

2000-07-18  John W. Eaton  <jwe@bevo.che.wisc.edu>
